[package]
name = "knucleotide-rs"
version = "0.1.0"
authors = ["inv2004"]

[[bench]]
name = "bench"
harness  = false

[dependencies]
futures = "0.1.28"
futures-cpupool = "*"
tokio-threadpool = "0.1.14"
indexmap = "*"
# rayon = "*"
itertools = "*"
num = "*"
bencher = "*"
hashbrown = "*"

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
codegen-units = 1
# panic = 'abort'
incremental = false
overflow-checks = false

[profile.bench]
opt-level = 3
lto = true
debug = false
debug-assertions = false
codegen-units = 1
# panic = 'abort'
incremental = false
overflow-checks = false
